tests/custom/STARIS_2022/basic/matrices/matrix-forAll/stderr.expected
Error:
    matrix-forAll.essence:6:33:
  |
6 | such that b = forAll i in a . i=i*i
  |                                 ^
Type error:
	Expected: number or enum
	Got: matrix indexed by [int] of int

matrix-forAll.essence:6:35:
  |
6 | such that b = forAll i in a . i=i*i
  |                                   ^
Type error:
	Expected: number or enum
	Got: matrix indexed by [int] of int

